Warnings when display panel is closed while being initialized.
Steps to reproduce:
- Open GNOME Control Center
- Go to Devices->Display panel
- Close the window
- Open GNOME Control Center again (in overview mode)
The following warnings are displayed:
(gnome-control-center:18634): GLib-GObject-CRITICAL **: 16:39:15.656: g_object_unref: assertion 'G_IS_OBJECT (object)' failed (gnome-control-center:18634): GLib-GObject-CRITICAL **: 16:39:15.656: g_object_unref: assertion 'G_IS_OBJECT (object)' failed (gnome-control-center:18634): display-cc-panel-WARNING **: 16:39:15.657: failed to connect to g-s-d: Operation was cancelled (gnome-control-center:18634): display-cc-panel-WARNING **: 16:39:15.657: failed to connect to g-s-d: Operation was cancelled